# haskell-spa-tutorial

./: .gitignore  README.md
1-cabal/: README.md  todo.cabal
1-cabal/src/: Todo.hs
2-nix/: README.md  default.nix  todo.cabal
2-nix/app/: Main.hs
3-server/: LICENSE  README.md  default.nix  shell.nix  todo.cabal
3-server/nix/: overlay.nix
3-server/src/Todo/Web/: Server.hs
4-client/: README.md  shell.nix  todo.cabal
4-client/app/: Main.hs
4-client/src/Todo/Web/: Server.hs
5-ghcjs/: README.md  shell-ghcjs.nix  todo.cabal
5-ghcjs/app/: Main.hs
5-ghcjs/nix/: overlay.nix
5-ghcjs/src/Todo/Web/Server/: GHCJS.hs
5-static/: README.md  todo.cabal
5-static/nix/: overlay.nix
5-static/src/Todo/Web/: Server.hs  View.hs
5-static/static/: base.css
6-ghcjs/: README.md  default.nix  shell-ghcjs.nix  todo.cabal
6-ghcjs/app/: JS.hs
6-ghcjs/nix/: default.nix  nixpkgs.json  overlay.nix
6-ghcjs/src/Todo/Web/: Client.hs  Server.hs
6-ghcjs/src/Todo/Web/Server/: GHCJS.hs  JSaddle.hs
6-ghcjs/static/: base.css
7-view/: README.md  todo.cabal
7-view/app/: Dev.hs
7-view/src/Todo/Web/: Server.hs  View.hs
8-state/: README.md  todo.cabal
8-state/nix/: nixpkgs.json
8-state/src/Todo/Web/: Client.hs  Handler.hs  Server.hs  State.hs  Types.hs  View.hs
8-state/src/Todo/Web/Server/: JSaddle.hs
8-state/static/: base.css
