name:                todo
version:             0.0.0.0
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10

executable todo
  main-is:             Main.hs
  default-language:    Haskell2010
  hs-source-dirs:      app
  ghc-options:         -O2 -Wall -Werror -threaded -rtsopts
  build-depends:       base >=4.14.3 && <4.15
                     , todo

library
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall -Werror
  ghcjs-options:       +RTS -K4G -RTS
  default-language:    Haskell2010
  build-depends:       base >=4.14.3 && <4.15
  exposed-modules:     Todo
