name:                todo
version:             0.0.0.0
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10

executable todo
  main-is:             Main.hs
  default-language:    Haskell2010
  hs-source-dirs:      app
  ghc-options:         -O2 -Wall -Werror -threaded -rtsopts
  build-depends:       base >=4.12.0 && <4.13
                     , todo

library
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall -Werror
  ghcjs-options:       +RTS -K4G -RTS
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , OverloadedStrings
                     , TypeApplications
  build-depends:       base >=4.12.0 && <4.13
                     , jsaddle >=0.9.6 && <0.10
                     , jsaddle-warp >=0.9.6 && <0.10
                     , lucid >=2.9.11 && <2.10
                     , miso >=1.8.0.0 && <1.9
                     , servant-lucid >=0.8.1 && <0.9
                     , servant-server ==0.15.*
                     , warp >=3.2.27 && <3.3
                     , websockets >=0.12.5 && <0.13
  exposed-modules:     Todo.Web.Client
                     , Todo.Web.Server
                     , Todo.Web.View
