name:                todo
version:             0.0.0.0
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10

executable todo
  main-is:             Main.hs
  default-language:    Haskell2010
  if impl(ghcjs)
    buildable: False
  else
    hs-source-dirs:      app
    ghc-options:         -O2 -Wall -Werror -threaded -rtsopts
    build-depends:       base >=4.12.0 && <4.13
                       , todo

executable todo-dev
  main-is:             Dev.hs
  default-language:    Haskell2010
  if impl(ghcjs)
    buildable: False
  else
    hs-source-dirs:      app
    ghc-options:         -O2 -Wall -Werror -threaded -rtsopts
    build-depends:       base >=4.12.0 && <4.13
                       , todo

executable todo-js
  main-is:             JS.hs
  default-language:    Haskell2010
  if !impl(ghcjs)
    buildable: False
  else
    hs-source-dirs:      app
    ghc-options:         -O2 -Wall -Werror -threaded -rtsopts
    ghcjs-options:       +RTS -K4G -RTS -dedupe
    cpp-options:         -DGHCJS_BROWSER
    build-depends:       base >=4.12.0 && <4.13
                       , todo

library
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall -Werror
  ghcjs-options:       +RTS -K4G -RTS
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , DeriveGeneric
                     , OverloadedStrings
                     , TypeApplications
                     , TypeOperators

  build-depends:       base >=4.12.0 && <4.13
                     , jsaddle >=0.9.6 && <0.10
                     , miso >=1.8.0 && <1.9
                     , servant ==0.15.*
                     , text >=1.2.3 && <1.3

  if !impl(ghcjs)
    build-depends:     hashable >=1.2.7 && <1.3
                     , jsaddle-warp >=0.9.6 && <0.10
                     , lucid >=2.9.11 && <2.10
                     , servant-lucid >=0.8.1 && <0.9
                     , servant-server ==0.15.*
                     , wai >=3.2.2 && <3.3
                     , warp >=3.2.27 && <3.3
                     , websockets >=0.12.5 && <0.13
  else
    build-depends:     ghcjs-base >=0.2.0 && <0.3

  exposed-modules:     Todo.Web.Client
                     , Todo.Web.View

  if !impl(ghcjs)
    exposed-modules:   Todo.Web.Server
                     , Todo.Web.Server.GHCJS
                     , Todo.Web.Server.JSaddle
