name:                todo
version:             0.0.0.0
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10

executable todo
  main-is:             Main.hs
  default-language:    Haskell2010
  hs-source-dirs:      app
  ghc-options:         -O2 -Wall -Werror -threaded -rtsopts
  build-depends:       base >=4.14.3 && <4.15
                     , todo

library
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall -Werror
  ghcjs-options:       +RTS -K4G -RTS
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , DeriveGeneric
                     , OverloadedStrings
                     , TypeApplications
                     , TypeOperators
  build-depends:       base >=4.14.3 && <4.15
                     , hashable >=1.3.0 && <1.4
                     , jsaddle >=0.9.8 && <0.10
                     , jsaddle-warp >=0.9.8 && <0.10
                     , lucid >=2.9.11 && <2.10
                     , miso >=1.8.0 && <1.9
                     , servant >=0.18.3 && <0.19
                     , servant-lucid >=0.9.0 && <0.10
                     , servant-server >=0.18.3 && <0.19
                     , text >=1.2.4 && <1.3
                     , warp >=3.3.17 && <3.4
                     , websockets >=0.12.7 && <0.13
  exposed-modules:     Todo.Web.Client
                     , Todo.Web.Server
                     , Todo.Web.View
